# JNE-Calculator-CMake

./: CMakeLists.txt  README.md
sources/: jnecalc.cpp
